packages/starlight-theme-bejamas/src/styles/theme.css
@layer starlight, bejamas;

@import "@fontsource-variable/inter/index.css";

@layer bejamas {
  :root {
    --sl-font: "Inter Variable", sans-serif;
    --sl-font-mono: "Geist Mono", monospace;

    --radius: 0.5rem;

    --sl-color-text-accent: var(--accent-foreground);

    --sl-color-banner-text: var(--foreground);

    --sl-color-bg-inline-code: var(--muted);

    --sl-color-hairline-shade: var(--border);

    --sl-color-bg-sidebar: var(--background);

    --sl-color-gray-5: var(--input);
    --sl-color-black: transparent;

    --code-background: var(--muted);
    --sl-color-text: var(--foreground);

    --sl-text-h1: 2.25rem;
    --sl-text-h2: var(--text-xl);
    --sl-text-h3: var(--text-lg);

    --sl-color-gray-2: var(--input);

    --default-font-family: "Inter Variable", sans-serif;
    --font-sans: "Inter Variable", sans-serif;

    --sl-color-bg: var(--background);
    --sl-color-fg: var(--foreground);
    --sl-color-primary: var(--primary);
    --sl-color-primary-fg: var(--primary-foreground);

    --sl-color-hairline: var(--border);
    --sl-color-bg-nav: var(--background);

    --sl-color-text-accent: var(--primary);
    --sl-color-accent: var(--primary);

    --sl-nav-height: calc(var(--spacing) * 18);
    /* --sl-nav-height: auto; */
    --sl-nav-pad-y: calc(var(--spacing) * 4);
  }
}

@layer bejamas {
  .sidebar-pane .sidebar-content,
  .right-sidebar-panel {
    --sl-sidebar-item-padding-inline: 1rem;
    padding-top: 3rem;
  }

  .right-sidebar,
  .sidebar .sidebar-pane {
    border: 0;
  }

  .sidebar-content a {
    background-color: var(--background);
    padding: 0;
  }

  .group-label > span {
    color: var(--muted-foreground);
    font-size: 0.875rem;
    font-weight: 500;
  }

  .group-label + svg {
    color: var(--muted-foreground);
    font-size: 1rem;
  }

  .sidebar-content a > span {
    color: var(--foreground);
    padding-inline: 0.5rem;
    padding-block: 0.375rem;
    border-radius: 0.5rem;
    /* transition-property: color, background-color;
    transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
    transition-duration: 0.05s; */
    display: inline-block;
  }

  .sidebar-content a[aria-current="page"] > span {
    background-color: var(--secondary);
    color: var(--secondary-foreground);
    font-weight: 500;
  }

  .sidebar-content a:not([aria-current="page"]):hover > span {
    background-color: var(--secondary);
    color: var(--secondary-foreground);
  }

  .sidebar-content ul ul li {
    margin-inline-start: 0;
    border-inline-start: 0;
    padding-inline-start: 0;
    margin-bottom: 1px;
  }

  .right-sidebar-container {
    max-width: 20rem;
    margin-right: 0;
    margin-left: auto;
  }

  .content-panel {
    border-top: 0;
  }

  .content-panel:first-child {
    padding-bottom: 0;
    padding-top: 2.5rem;
  }

  .right-sidebar-panel h2 {
    color: var(--color-muted-foreground);
    font-size: 0.875rem;
    font-weight: 500;
    padding-inline: 0.5rem;
  }

  site-search button {
    --tw-shadow: var(--shadow-sm);
    box-shadow:
      var(--tw-inset-shadow), var(--tw-inset-ring-shadow),
      var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
    border-radius: calc(var(--radius) - 2px);
    max-width: calc(var(--spacing) * 50);
  }

  .expressive-code .frame {
    box-shadow: none;
  }

  ul.top-level li details ul li:last-child {
    margin-bottom: 1.25rem;
  }

  ul.top-level summary {
    margin-bottom: 0.25rem;
  }

  starlight-tabs[data-sync-key="pkg"] .tablist-wrapper {
    background-color: var(--code-background);
    border-bottom: 1px solid var(--color-border);

    padding-top: 0.5rem;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    font-family: var(--sl-font-mono);
    font-size: 0.875rem;
  }

  starlight-tabs[data-sync-key="pkg"] .tablist-wrapper ul {
    padding-bottom: 0.5rem;
    padding-inline: 0.75rem;
    border-bottom: 0;
    gap: 0;
  }

  starlight-tabs[data-sync-key="pkg"] .tablist-wrapper a {
    border-bottom: 0;
    padding-block: 0.5rem;
    padding-inline: 0.75rem;
  }

  starlight-tabs[data-sync-key="pkg"] .tablist-wrapper a[aria-selected="true"] {
    background-color: var(--color-accent);
    color: var(--color-accent-foreground);
    border-bottom: 0;
    border-radius: 0.5rem;
  }

  starlight-tabs[data-sync-key="pkg"] .tablist-wrapper ~ div[role="tabpanel"] {
    margin-top: 0;
  }

  starlight-tabs[data-sync-key="pkg"] figcaption.header {
    display: none;
  }

  .tablist-wrapper > ul {
    border: 0;
    gap: 1.25rem;
  }

  .tablist-wrapper > ul a {
    padding-inline: 0;
  }

  .sl-heading-wrapper.level-h2 {
    margin-top: 4rem;
  }

  .sl-heading-wrapper.level-h3 {
    margin-top: 3rem;
  }

  .sl-markdown-content a:not(:where(.not-content *)) {
    text-decoration: underline;
    text-underline-offset: 4px;
  }

  button[data-open-modal] {
    border-color: var(--border);
    color: var(--foreground);
    box-shadow: var(--shadow-xs);
    background-color: var(--background);
    height: 2.375rem;
  }

  button[data-open-modal] kbd {
    background-color: var(--muted);
    color: var(--muted-foreground);
    border-radius: calc(var(--radius) - 4px);
    gap: 0;
  }

  .tablist-wrapper ~ [role="tabpanel"] {
    margin-top: 0.5rem;
  }

  .expressive-code .title {
    background-color: var(--color-muted);
    color: var(--color-muted-foreground);
    border-color: var(--color-border);

    font-family: var(--sl-font-mono);
    width: 100%;
    border-bottom: 1px solid var(--color-border);
    font-size: 0.875rem;
    padding-block: 0.75rem;
  }

  .sl-markdown-content :is(h1, h2, h3, h4, h5, h6):not(:where(.not-content *)) {
    font-weight: 500;
  }

  .sl-bejamas-component-preview {
    min-height: 450px;
    padding: 1rem;
    border: 1px solid var(--border);
    border-radius: 0.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--background);
  }

  .sl-markdown-content ul:not(:where(.not-content *)) {
    list-style: disc;
    padding-left: 1rem;
  }

  .sl-markdown-content ol:not(:where(.not-content *)) {
    list-style: decimal;
    padding-left: 1rem;
  }

  .tablist-wrapper {
    overflow-x: inherit;
  }

  .tablist-wrapper a[role="tab"] {
    border-bottom: 0;
    padding: 0;
    display: inline-block;
  }

  .sl-markdown-content :is(th, td):not(:where(.not-content *)) {
    min-width: 10rem;
    padding-inline: 1rem;
    border-color: var(--border);
  }

  .sl-markdown-content
    :is(tr):last-child
    :is(th, td):not(:where(.not-content *)) {
    border-bottom: 0;
  }

  .sl-markdown-content table:not(:where(.not-content *)) {
    border: 1px solid var(--border);
    border-radius: calc(var(--radius) - 2px);
  }
}

